web/book/tests/documentation/snapshots/documentation__book__transforms__select__excluding-columns__0.snap
---
source: web/book/tests/documentation/book.rs
expression: "prql target:sql.bigquery\nfrom tracks\nselect !{milliseconds,bytes}\n"
---
SELECT
  *
EXCEPT
  (milliseconds, bytes)
FROM
  tracks

